<resources>

    <string name="app_name">GreenFoodChallenge</string>
    <string name="eating_habits_name">Diet</string>
    <string name="eco_name">Eco Eating</string>
    <string name="user_name">User</string>
    <string name="pledge_name">Pledge</string>
    <string name="restaurant_name">Restaurants</string>


    //Strings for EcoFragment
    <string-array name="types_of_diet">
        <item name="currentDiet">[Select Diet]</item>
        <item name="highMeat">Meat eater</item>
        <item name="lowMeat">Low Meat</item>
        <item name="onlyFish">Only Fish</item>
        <item name="vegetarian">Vegetarian</item>
        <item name="vegan">Vegan</item>
    </string-array>
    <string name="titleText">Pick a new diet below to see how your ecological footprint can be
        improved by changing the proportions of your diet.\n</string>
    <string name="newDietImprovement">\t - This diet is %1$.2f \% better than your current diet.</string>
    <string name="C02eEmissionsComparisonDescription">The new diet is a %1$.1f \% improvement over the current diet:
        \n\t- Produces %2$.2f less tonnes of C02e
        \n\t- This is equivalent to %3$.2f barrels of gasoline</string>



    <string name="highMeat">Meat eater</string>
    <string name="lowMeat">Low Meat</string>
    <string name="onlyFish">Only Fish</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="BetterPercentage">Improvement over current diet</string>
    <string name="dietInfo">Please enter your diet in Eating Habits Page.\nAfter that, You
        can chose the diets above.
    </string>
    <string name="highMeatButtonInfo">Diet with same overall meat proportions, but different proportions of each meat
        type.
    </string>
    <string name="highMeatButtonChange">75% of beef proportions to pork\n50% of new pork proportions to chicken
        \n25% of new chicken proportions to fish.
    </string>
    <string name="lowMeatButtonInfo">Diet with lowered proportions of overall meat.</string>
    <string name="lowMeatButtonChange">100% of beef proportions moved to pork
        \n75% of new pork proportions moved to chicken
        \n50% of new chicken proportions moved to fish and eggs (25/75)
        \n25% of each of new fish and eggs proportions go to beans and veg (50/50).
    </string>
    <string name="onlyFishButtonInfo">Diet with lower overall meat and fish being only meat.</string>
    <string name="onlyFishButtonChange">100% of all meat but fish get split\n
        \n(40/25/25/10) fish, eggs, beans, and veg.
    </string>
    <string name="vegetarianButtonInfo">Diet with no meat.</string>
    <string name="vegetarianButtonChange">100% of all beef, pork, chicken, and fish
        gets split \n(40/40/20) with eggs, beans and veg.
    </string>
    <string name="veganButtonInfo">Diet with no meat or eggs.</string>
    <string name="veganButtonChange">100% of all meats and eggs gets split
        \n(80/20) with beans and veg.
    </string>

    // Strings for info fragment
    <string name="info_name">About</string>
    <string name="info">\tThe reason we made this app is to help people
        plan new, eco friendly diets in hopes of reducing greenhouse gas
        emissions and meeting Metro Vancouver\'s goal of becoming the greenest
        city in the world by 2020.
        \n\nWhat Contributes to Greenhouse Gases?
        \n\n\tGreenhouse gases are measured in CO2e (or CO2 equivalents) and there are
        many CO2e contributors. Most people are aware of contributors such as
        burning fuel and natural gas, but it comes as a surprise to many that
        food production and transportation (livestock in particular) accounts
        for 20%% of a person\'s greenhouse gas emissions!
        \n\n\tWhat Can We Do?
        \n\n\tWe can be more aware of what we eat and change our diets to reduce greenhouse
        gas emissions, and it does not even have to be an extreme dietary change. If people
        in the Metro Vancouver area reduced their beef/lamb consumption by 20% and replaced
        it with chicken, we could save up to 1 million tonnes of CO2e per year!
        \n\n\tWhere Does the Green Food Challenge Come In?
        \n\n\tThe Green Food Challenge aims to reduce our individual and collective carbon
        footprints by raising awareness and making it easy for users to adopt more
        environmentally friendly, lower carbon diets. Simply enter an estimate of how much
        meat and alternatives you eat and the app will make new, eco-friendly diets for you
        to choose from. It\'s that easy, so what are you waiting for?
        \n\n\tLet\'s get saving!
    </string>


    // Strings for EatingHabitsFragment
    <string name="calculator_invalid_input_toast">Please enter at least one valid amount</string>
    <string name="calculator_results">\n\n\t
        \n\tThis diet will produce %1$.2f tonnes/year of CO2e which is equivalent to burning %2$.2f
        litres of gasoline. Think about how much gas you use to commute!
        \n\n\tCompared to the regional average of %3$.2f tonnes/year per capita, this diet produces %4$s.
        \n\n\tIf everyone in your area ate like this for a year, they would produce approximately %5$d tonnes of C02e
        which is %6$s than the current %7$d tonnes.
        \n\n\tAs you can see these numbers are massive! Lets look at the Eco page to see how changing our diet can
        affect
        these numbers.
    </string>

    <string name="show_pledge_information">%1$d people and %2$.2f tonnes of C02e have been pledged in total.\nThis is
        equivalent to %3$.2f barrels of gasoline.\n\nThe average C02e saved per person is %4$.2f tonnes.
    </string>

    // Strings for calculator results
    <string name="calculator_text1">This is the proportion of foods in your diet by weight:</string>
    <string name="calculator_text2">\n\nThis is the proportion of foods in your diet by C02e emissions:</string>
    <string name="calculator_text3">\nYour diet will produce %1$.2f tonnes of C02e per year:
        \n\t- Equivalent to burning %2$.2f barrels of gasoline
        \n\t- %3$s compared to Metro Vancouver\n\t  average of %4$.2f tonnes</string>
    <string name="calculator_text4">\n\nGo to the Eco Eating page to see if it\'s possible to reduce our
        ecological footprint!</string>
    <string name="beefServingsGuide">Beef: 75 g (2 ½ oz) / 125 mL, (½ cup)</string>
    <string name="chickenServingsGuide">Chicken: 75 g (2 ½ oz) / 125 mL, (½ cup)</string>
    <string name="porkServingsGuide">Pork: 75 g (2 ½ oz) / 125 mL, (½ cup)</string>
    <string name="fishServingsGuide">Fish: 75 g (2 ½ oz) / 125 mL, (½ cup)</string>
    <string name="beansServingsGuide">Beans: 150 g (5 oz) / 175 mL, (¾ cup)</string>
    <string name="vegetablesServingsGuide">Vegetables: 150 g, 175 mL, (¾ cup)</string>
    <string name="eggsServingsGuide">Eggs: 2 eggs</string>

    // Strings for restaurant fragments
    <string name="refresh_text">Refresh</string>
    <string name="add_meal_card_text">Add A Meal</string>
    <string name="delete_meal_card_text">Delete</string>
    <string name="exit_dialog_text">Exit</string>
    <string name="enter_meal_text">Add</string>
    <string name="add_image_text">Add Meal Image (Optional)</string>
    <string name="dialog_title_text">Enter Your Meal</string>
    <string name="meal_name_title">Enter the name of your meal:</string>
    <string name="meal_protein_title">Enter the main protein source in your meal:</string>
    <string name="restaurant_name_title">Enter the name of the restaurant where you ordered this meal:</string>
    <string name="restaurant_location_title">Enter the location of this restaurant:</string>
    <string name="description_title">Enter a short description of this meal (optional):</string>
    <string name="add_meal_invalid_input_toast">Meal name, meal protein, restaurant name, and restaurant location are mandatory</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="municipalities_spinner">
        <item name="no_municipality">No municipality chosen</item>
        <item name="anmore">Anmore</item>
        <item name="belcarra">Belcarra</item>
        <item name="bowen_island">Bowen Island</item>
        <item name="burnaby">Burnaby</item>
        <item name="coquitlam">Coquitlam</item>
        <item name="delta">Delta</item>
        <item name="langley">Langley</item>
        <item name="lions_bay">Lions Bay</item>
        <item name="maple_ridge">Maple Ridge</item>
        <item name="new_westminster">New Westminster</item>
        <item name="north_vancouver">North Vancouver</item>
        <item name="pitt_meadows">Pitt Meadows</item>
        <item name="port_coquitlam">Port Coquitlam</item>
        <item name="port_moody">Port Moody</item>
        <item name="richmond">Richmond</item>
        <item name="surrey">Surrey</item>
        <item name="university_endowment_lands">University Endowment Lands</item>
        <item name="vancouver">Vancouver</item>
        <item name="west_vancouver">West Vancouver</item>
        <item name="white_rock">White Rock</item>
    </string-array>

    //No user name
    <string name="no_user_name">No name given</string>

    <string name="facebook_application_id" translatable="false">254721118525412</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb254721118525412</string>

    <!-- TODO: add consumer key and secret when available -->
    <string name="twitter_consumer_key" translatable="false">6hAtWCzYmqeZ9Ec0pQqxbysrr</string>
    <string name="twitter_consumer_secret" translatable="false">cXrj3MUjnD2ETeXgXcAZ1DmKxkA7upIBlYiD4a0DgJjrrRQFtc
    </string>

    <string name="sign_in_btn_txt">Sign in</string>
    <string name="sign_out_btn_txt">Sign out</string>
    <string name="delete_user_btn_txt">Delete user</string>
    <string name="sign_in_cancelled">Sign in cancelled.</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="alias">Alias</string>
    <string name="choose_city">Choose City</string>

    <string name="toast_sign_out">Signed out!</string>
    <string name="toast_already_signed_in">Already signed in!</string>


</resources>
